# TFG

./: .gitignore  Makefile  arquitectura_rag_canarias.md  docker-compose.yml
CrawlerWeb/: Program.cs
CrawlerWeb/Controllers/: HomeController.cs
CrawlerWeb/Models/: CrawlResult.cs  CrawlViewModel.cs  CrawlerRequest.cs  ErrorViewModel.cs
CrawlerWeb/Output/memoriadelanzarote.com/: coleccion_cesar-manrique.txt  coleccion_coleccion-diego-cuscoy-museo-arqueologico-de-puerto-de-la-cruz.txt  coleccion_conferencias-de-memoria-de-los-jueves.txt  coleccion_fondo-documental-de-los-cact.txt  coleccion_peliculas-domesticas-y-cine-amateur-de-lanzarote.txt  coleccion_tesoros-de-la-isla-santiago-aleman.txt  colecciones.txt  imagenes.txt  index.txt  item_24412-retrato-de-mujer-en-la-graciosa.txt  item_24413-partido-de-baloncesto-femenino-en-yaiza-i.txt  item_24414-partido-de-baloncesto-femenino-en-yaiza-ii.txt  item_24415-partido-de-baloncesto-femenino-en-yaiza-iii.txt  item_24416-rincon-de-interior-domestico-con-mobiliario-y-plantas.txt  item_24417-mujer-paseando-en-la-plaza-de-los-remedios.txt  item_24418-partido-de-baloncesto-femenino-en-yaiza-iv.txt  item_24419-mujer-joven-sentada-en-el-campo.txt  item_undefined.txt  noticia_cien-anos-de-javier-reyes-acuna-1926-2026.txt  noticia_humanidad-naturalidad-y-tecnica-fotografica-el-legado-eterno-de-javier-reyes-acuna.txt
CrawlerWeb/Properties/: launchSettings.json
CrawlerWeb/Services/: CrawlerService.cs  ICrawlerService.cs
CrawlerWeb/Views/: _ViewImports.cshtml
CrawlerWeb/Views/Home/: Index.cshtml
CrawlerWeb/Views/Shared/: _Layout.cshtml
docs/: contrato-datos.md
rag-canarias/: .env.example  .gitignore  README.md  pyproject.toml
rag-canarias/api/: main.py  routes.py  schemas.py
rag-canarias/config/: settings.py  sources.yaml
rag-canarias/connectors/: base.py  memoria_lanzarote.py
rag-canarias/crawler/: fetcher.py  robots.py
rag-canarias/generation/: generator.py  prompt_templates.py
rag-canarias/indexing/: embeddings.py  lexical_index.py  vector_index.py
rag-canarias/parser/: html_parser.py
rag-canarias/pipeline/: ingest.py  query.py
rag-canarias/processing/: chunker.py  enricher.py  normalizer.py
rag-canarias/retrieval/: lexical_search.py  reranker.py  retriever.py  vector_search.py
rag-canarias/scripts/: build_index.py  ingest_all.py  ingest_source.py  query_cli.py
rag-canarias/storage/: document_store.py  models.py
rag-canarias/tests/: conftest.py
rag-canarias/tests/fixtures/memoria_lanzarote/: NOTAS.md  fixture_document_detail_1.html  fixture_document_detail_2.html  fixture_document_detail_3.html  fixture_documents_list.html  fixture_item_media.html
rag-canarias/tests/test_config/: test_settings.py
rag-canarias/tests/test_connectors/: test_base.py  test_memoria_lanzarote.py  test_memoria_lanzarote_integration.py
rag-canarias/tests/test_crawler/: test_fetcher.py  test_robots.py
rag-canarias/tests/test_models/: test_models.py
rag-canarias/tests/test_parser/: test_html_parser.py
