[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-canarias"
version = "0.1.0"
description = "Sistema RAG para consulta inteligente sobre patrimonio cultural de Canarias"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "crawl4ai>=0.8",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "nest-asyncio>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
include = [
    "config*",
    "connectors*",
    "crawler*",
    "parser*",
    "processing*",
    "storage*",
    "indexing*",
    "retrieval*",
    "generation*",
    "api*",
    "pipeline*",
    "scripts*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
